--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF‑8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Rightlink‑Style Site</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🚀 Website Coming Soon!</h1>
-    <p>We're working hard to bring you something amazing.</p>
-    <button onclick="notifyMe()">Notify Me</button>
-  </div>
+  <header>
+    <nav class="nav‑bar">
+      <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+      <ul>
+        <li><a href="vision.html">Vision</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="industries.html">Industries</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <script src="script.js"></script>
+  <main>
+    <section class="hero">
+      <h1>Empowering Growth</h1>
+      <p>Global talent for IT, AI, Cloud, Analytics, and beyond.</p>
+      <a href="contact.html" class="btn">Get in Touch</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Rightlink‑Style Demo</p>
+  </footer>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
