--- a/index.html
+++ b/index.html
@@ -1,35 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Rightlink‑Style Site</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Rightlink Solutions Limited</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+    }
+
+    header {
+      background: url('https://images.unsplash.com/photo-1508923567004-3a6b8004f3d3?auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding: 100px 20px 60px;
+    }
+
+    nav {
+      background: #0d1b2a;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      padding: 15px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .section {
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    .section h2 {
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    .section p {
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .images {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
+
+    .images img {
+      width: 300px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .features {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .feature-box {
+      background: #f1f1f1;
+      padding: 30px;
+      width: 250px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .feature-box h3 {
+      margin-bottom: 10px;
+      color: #003049;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #e5e5e5;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 768px) {
+      .features, .images {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav {
+        flex-wrap: wrap;
+      }
+    }
+  </style>
 </head>
 <body>
+
+  <nav>
+    <a href="#">HOME</a>
+    <a href="#">VISION</a>
+    <a href="#">SERVICES</a>
+    <a href="#">INDUSTRIES</a>
+    <a href="#">TESTIMONIALS</a>
+    <a href="#">ABOUT US</a>
+    <a href="#">CONTACT</a>
+  </nav>
+
   <header>
-    <nav class="nav‑bar">
-      <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
-      <ul>
-        <li><a href="vision.html">Vision</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="industries.html">Industries</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <h1>Rightlink Solutions Limited</h1>
+    <h2>Empowering Growth!</h2>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1>Empowering Growth</h1>
-      <p>Global talent for IT, AI, Cloud, Analytics, and beyond.</p>
-      <a href="contact.html" class="btn">Get in Touch</a>
-    </section>
-  </main>
+  <section class="section">
+    <h2>What we do</h2>
+    <p>We bring global talent to build high performing teams to achieve exceptional goals.
+    Rightlink specializes in providing on-demand professionals at various levels in the fields of Information Technology, Management Consulting, and Finance and Accounting for temporary and permanent positions across multiple industry sectors.</p>
+    <div class="images">
+      <img src="https://images.unsplash.com/photo-1585842455260-80970e0e6473?auto=format&fit=crop&w=600&q=80" alt="Chessboard">
+      <img src="https://images.unsplash.com/photo-1531497865144-0464ef8fbf88?auto=format&fit=crop&w=600&q=80" alt="Smiling Woman">
+    </div>
+  </section>
+
+  <section class="section" style="background: #f9f9f9;">
+    <h2>Why Rightlink?</h2>
+    <div class="features">
+      <div class="feature-box">
+        <h3>Industry Expertise<br>with Wide Network</h3>
+        <p>Rightlink has a deep understanding of specific industries and job needs. Access a wider pool of talented candidates and a vast job seeker network.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Flexibility in<br>Staffing Needs</h3>
+        <p>Rightlink provides contract, temporary, temp-to-perm, or permanent staffing tailored to business requirements.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Cost Effective and<br>Timely Solutions</h3>
+        <p>Rightlink handles the recruitment process, saving businesses time and money.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Productivity and<br>Scalability</h3>
+        <p>Quickly scale up or down to meet changing business needs with Rightlink.</p>
+      </div>
+    </div>
+  </section>
 
   <footer>
-    <p>© 2025 Rightlink‑Style Demo</p>
+    © 2025 Rightlink Solutions Limited. Created for free using <a href="https://wordpress.com/" target="_blank">WordPress</a> and <a href="https://colibriwp.com/" target="_blank">Colibri</a>
   </footer>
-  <script src="assets/js/main.js"></script>
+
 </body>
 </html>
