--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     header {
-      background: url('https://images.unsplash.com/photo-1508923567004-3a6b8004f3d3?auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+      background: url('Images/Skyline.jpg') no-repeat center center/cover;
       color: white;
       text-align: center;
       padding: 100px 20px 60px;
@@ -124,8 +124,8 @@
     <p>We bring global talent to build high performing teams to achieve exceptional goals.
     Rightlink specializes in providing on-demand professionals at various levels in the fields of Information Technology, Management Consulting, and Finance and Accounting for temporary and permanent positions across multiple industry sectors.</p>
     <div class="images">
-      <img src="https://images.unsplash.com/photo-1585842455260-80970e0e6473?auto=format&fit=crop&w=600&q=80" alt="Chessboard">
-      <img src="https://images.unsplash.com/photo-1531497865144-0464ef8fbf88?auto=format&fit=crop&w=600&q=80" alt="Smiling Woman">
+      <img src="Images/Chess.png" alt="Chessboard">
+      <img src="Images/Woman smiling.jpg" alt="Smiling Woman">
     </div>
   </section>
 
@@ -152,7 +152,7 @@
   </section>
 
   <footer>
-    © 2025 Rightlink Solutions Limited. Created for free using <a href="https://wordpress.com/" target="_blank">WordPress</a> and <a href="https://colibriwp.com/" target="_blank">Colibri</a>
+    © 2025 Rightlink Solutions Limited. 
   </footer>
 
 </body>
