--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Trebuchet MS', Arial, sans-serif;
       line-height: 1.6;
+    }
+
+    header h1 {
+      font-size: 4em;
     }
 
     header {
@@ -38,13 +42,14 @@
     }
 
     .section h2 {
-      font-size: 2em;
+      font-size: 3em;
       margin-bottom: 10px;
     }
 
     .section p {
       max-width: 800px;
       margin: auto;
+      font-size: 1.2em;
     }
 
     .images {
@@ -56,10 +61,11 @@
     }
 
     .images img {
-      width: 300px;
-      height: 200px;
+      width: 600px;
+      height: 400px;
       object-fit: cover;
       border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .features {
