--- a/index.html
+++ b/index.html
@@ -139,18 +139,22 @@
     <h2>Why Rightlink?</h2>
     <div class="features">
       <div class="feature-box">
+        <img src="Images/collaboration.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
         <h3>Industry Expertise<br>with Wide Network</h3>
         <p>Rightlink has a deep understanding of specific industries and job needs. Access a wider pool of talented candidates and a vast job seeker network.</p>
       </div>
       <div class="feature-box">
+        <img src="Images/signal.png" alt="Feature Icon" style="width: 70px; height: 60px; margin-bottom: 15px;">
         <h3>Flexibility in<br>Staffing Needs</h3>
         <p>Rightlink provides contract, temporary, temp-to-perm, or permanent staffing tailored to business requirements.</p>
       </div>
       <div class="feature-box">
+        <img src="Images/Chess.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
         <h3>Cost Effective and<br>Timely Solutions</h3>
         <p>Rightlink handles the recruitment process, saving businesses time and money.</p>
       </div>
       <div class="feature-box">
+        <img src="Images/Chess.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
         <h3>Productivity and<br>Scalability</h3>
         <p>Quickly scale up or down to meet changing business needs with Rightlink.</p>
       </div>
