--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0;
       font-family: 'Trebuchet MS', Arial, sans-serif;
       line-height: 1.6;
+      padding-top: 50px; /* adjust based on nav height */
     }
 
     header h1 {
@@ -28,6 +29,12 @@
       justify-content: center;
       gap: 30px;
       padding: 15px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
 
     nav a {
@@ -144,17 +151,17 @@
         <p>Rightlink has a deep understanding of specific industries and job needs. Access a wider pool of talented candidates and a vast job seeker network.</p>
       </div>
       <div class="feature-box">
-        <img src="Images/signal.png" alt="Feature Icon" style="width: 70px; height: 60px; margin-bottom: 15px;">
+        <img src="Images/signal.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
         <h3>Flexibility in<br>Staffing Needs</h3>
         <p>Rightlink provides contract, temporary, temp-to-perm, or permanent staffing tailored to business requirements.</p>
       </div>
       <div class="feature-box">
-        <img src="Images/Chess.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
+        <img src="Images/sand-clock.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
         <h3>Cost Effective and<br>Timely Solutions</h3>
         <p>Rightlink handles the recruitment process, saving businesses time and money.</p>
       </div>
       <div class="feature-box">
-        <img src="Images/Chess.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
+        <img src="Images/cubes.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
         <h3>Productivity and<br>Scalability</h3>
         <p>Quickly scale up or down to meet changing business needs with Rightlink.</p>
       </div>
