--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
     <a href="#">SERVICES</a>
     <a href="#">INDUSTRIES</a>
     <a href="#">TESTIMONIALS</a>
-    <a href="about.html">ABOUT US</a>
+    <a href="#">ABOUT US</a>
     <a href="#">CONTACT</a>
   </nav>
 
@@ -132,13 +132,18 @@
     <h2>Empowering Growth!</h2>
   </header>
 
-  <section class="section">
-    <h2>What we do</h2>
-    <p>We bring global talent to build high performing teams to achieve exceptional goals.
-    Rightlink specializes in providing on-demand professionals at various levels in the fields of Information Technology, Management Consulting, and Finance and Accounting for temporary and permanent positions across multiple industry sectors.</p>
-    <div class="images">
-      <img src="Images/Chess.png" alt="Chessboard">
-      <img src="Images/Woman smiling.jpg" alt="Smiling Woman">
+  <section style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 60px 20px; gap: 40px;">
+    <div style="background-color: #ffffff; padding: 40px; max-width: 500px; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.05);">
+        <img src="Images/Chess.png" alt="Chessboard" style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
+      <h3 style="font-size: 16px; font-weight: bold; color: #000;">About us</h3>
+      <h1 style="font-size: 36px; font-weight: 500; margin: 20px 0;">We bring global talent to build high performing teams to achieve exceptional goals.</h1>
+      <p style="font-size: 16px; color: #3a3a3a; line-height: 1.6;">
+        Rightlink specializes in providing on-demand professionals at various levels in the fields of Information Technology, Management Consulting, and Finance and Accounting for temporary and permanent positions across multiple industry sectors.
+      </p>
+      
+    </div>
+    <div>
+      
     </div>
   </section>
 
