--- a/about.html
+++ b/about.html
@@ -4,116 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Rightlink Solutions Limited</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Trebuchet MS', Arial, sans-serif;
-      line-height: 1.6;
-      padding-top: 50px; /* adjust based on nav height */
-    }
-
-    header h1 {
-      font-size: 4em;
-    }
-
-    header {
-      background: url('Images/Skyline.jpg') no-repeat center center/cover;
-      color: white;
-      text-align: center;
-      padding: 100px 20px 60px;
-    }
-
-    nav {
-      background: #0d1b2a;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 15px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .section {
-      padding: 50px 20px;
-      text-align: center;
-    }
-
-    .section h2 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-
-    .section p {
-      max-width: 800px;
-      margin: auto;
-      font-size: 1.2em;
-    }
-
-    .images {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 30px;
-      flex-wrap: wrap;
-    }
-
-    .images img {
-      width: 600px;
-      height: 400px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .features {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .feature-box {
-      background: #f1f1f1;
-      padding: 30px;
-      width: 250px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .feature-box h3 {
-      margin-bottom: 10px;
-      color: #003049;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #e5e5e5;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 768px) {
-      .features, .images {
-        flex-direction: column; 
-        align-items: center;
-      }
-
-      nav {
-        flex-wrap: wrap;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -144,32 +35,6 @@
     </div>
     <div>
       
-    </div>
-  </section>
-
-  <section class="section" style="background: #f9f9f9;">
-    <h2>Why Rightlink?</h2>
-    <div class="features">
-      <div class="feature-box">
-        <img src="Images/collaboration.png" alt="Feature Icon" style="width: 100px; height: 60px; margin-bottom: 15px;">
-        <h3>Industry Expertise<br>with Wide Network</h3>
-        <p><span style="color: #475663;">Rightlink has a deep understanding of specific industries and job needs. Access a wider pool of talented candidates and a vast job seeker network.</span></p>
-      </div>
-      <div class="feature-box">
-        <img src="Images/signal.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
-        <h3>Flexibility in<br>Staffing Needs</h3>
-        <p><span style="color: #475663;">Rightlink provides contract, temporary, temp-to-perm, or permanent staffing tailored to business requirements.</span></p>
-      </div>
-      <div class="feature-box">
-        <img src="Images/sand-clock.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
-        <h3>Cost Effective and<br>Timely Solutions</h3>
-        <p><span style="color: #475663;">Rightlink handles the recruitment process, saving businesses time and money.</span></p>
-      </div>
-      <div class="feature-box">
-        <img src="Images/cubes.png" alt="Feature Icon" style="width: 60px; height: 60px; margin-bottom: 15px;">
-        <h3>Productivity and<br>Scalability</h3>
-        <p><span style="color: #475663;">Quickly scale up or down to meet changing business needs with Rightlink.</span></p>
-      </div>
     </div>
   </section>
 
