--- a/index.html
+++ b/index.html
@@ -4,117 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Rightlink Solutions Limited</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Trebuchet MS', Arial, sans-serif;
-      line-height: 1.6;
-      padding-top: 50px; /* adjust based on nav height */
-    }
-
-    header h1 {
-      font-size: 4em;
-    }
-
-    header {
-      background: url('Images/Skyline.jpg') no-repeat center center/cover;
-      color: white;
-      text-align: center;
-      padding: 100px 20px 60px;
-    }
-
-    nav {
-      background: #0d1b2a;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 15px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .section {
-      padding: 50px 20px;
-      text-align: center;
-    }
-
-    .section h2 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-
-    .section p {
-      max-width: 800px;
-      margin: auto;
-      font-size: 1.2em;
-    }
-
-    .images {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 30px;
-      flex-wrap: wrap;
-    }
-
-    .images img {
-      width: 600px;
-      height: 400px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .features {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .feature-box {
-      background: #f1f1f1;
-      padding: 30px;
-      width: 250px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .feature-box h3 {
-      margin-bottom: 10px;
-      color: #003049;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #e5e5e5;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 768px) {
-      .features, .images {
-        flex-direction: column; 
-        align-items: center;
-      }
-
-      nav {
-        flex-wrap: wrap;
-      }
-    }
-  </style>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
 
   <nav>
